--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -32,5 +32,8 @@ body {
 
 @import './components/header.scss';
 @import './components/todo.scss';
-@import './button/header-button.scss';
+@import './button/menu-button.scss';
+@import './main-wrapper.scss';
 @import './reset.scss';
+@import './components/addItem.scss';
+@import './button/input.scss';
