--- a/src/style/button/menu-button.scss
+++ b/src/style/button/menu-button.scss
@@ -1,7 +1,6 @@
-.header-button {
+.menu-button {
     padding: 10px 20px;
     border-radius: 18px;
-    cursor: pointer;
     box-shadow: 2px 3px 4px 1px rgba(0, 0, 0, 0.432);
     transition-duration: 0.1s;
 
@@ -9,4 +8,10 @@
         box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.432);
         transition-duration: 0.1s;
     }
+}
+
+.menu-add-button {
+    position: absolute;
+    left: 40px;
+    top: 130px;
 }
