--- a/src/style/components/todo.scss
+++ b/src/style/components/todo.scss
@@ -1,51 +1,90 @@
-.todo-main-wrapper {
-    margin-top: 70px;
+.todo-list {
+    width: 100%;
     padding: 20px;
-    .todo-list {
+    .todo-item {
         width: 90%;
+        box-shadow: 3px 4px 8px 0px rgba(0, 0, 0, 0.3);
+        background-color: #fff;
+        margin: 20px 0px;
         padding: 20px;
-        margin: 0px auto;
-        .todo-item {
-            width: 90%;
-            box-shadow: 2px 6px 12px 1px rgba(0, 0, 0, 0.534);
-            background-color: #fff;
-            margin: 20px auto;
-            padding: 20px;
-            border-radius: 12px;
+        border-radius: 12px;
 
-            display: inline-flex;
-            align-items: center;
+        display: inline-flex;
+        align-items: center;
 
-            position: relative;
+        position: relative;
 
-            h1 {
-                &:first-child {
-                    margin-right: 5%;
-                }
-                &:nth-child(2) {
-                    margin-right: 16%;
-                }
+        h1 {
+            text-align: left;
+            &:first-child {
+                width: 70px;
+                margin-right: 20px;
+                font-size: 18px;
             }
-            
-            p {
-                text-align: left;
-                &:nth-child(3) {
-                    margin-right: 50%;
-                }
+            &:nth-child(2) {
+                width: 240px;
+                margin-right: 40px;
             }
-
-            cursor: pointer;
-
-            .indicator {
-                width: 10px;
-                height: 10px;
-                border-radius: 12px;
-                background-color: brown;
+        }
+        
+        p {
+            text-align: left;
+            &:nth-child(3) {
+                width: 40%;
             }
-            .non {
-                opacity: 0;
-            }
+        }
 
+        cursor: pointer;
+        transition-duration: 0.1s;
+        
+        &:active {
+            box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.2);
+            transition-duration: 0.1s;
+        }
+
+        
+        .checkout-input {
+            position: absolute;
+            left: -40px;
         }
     }
+}
+
+.indicator {
+    color: rgb(253, 61, 28);
+    font-weight: 500;
+    padding: 5px 20px;
+
+    position: absolute;
+    right: -100px;
+
+}
+.non {
+    display: none;
+}
+
+.task-done {
+    box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.2) !important;
+    >h1 {
+        opacity: 0.4;
+        &:nth-child(2){
+            text-decoration: line-through;
+        }
+    }
+    >p {
+        opacity: 0.4;
+        &:nth-child(3){
+            text-decoration: line-through;
+        }
+    }
+}
+
+.important {
+    width: 20px;
+    height: 20px;
+    background-color: sandybrown;
+    border-radius: 50%;
+    position: absolute;
+
+    right: 20px;
 }
