add grid view and cerd component

--- a/src/style/button/menu-button.scss
+++ b/src/style/button/menu-button.scss
@@ -10,8 +10,9 @@
     }
 }
 
-.menu-add-button {
+.menu-change-view-button {
     position: absolute;
     left: 40px;
     top: 130px;
+    width: 90px;
 }
