--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -37,3 +37,4 @@ body {
 @import './reset.scss';
 @import './components/addItem.scss';
 @import './button/input.scss';
+@import './components/card.scss'
