--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -37,4 +37,5 @@ body {
 @import './reset.scss';
 @import './components/addItem.scss';
 @import './button/input.scss';
-@import './components/card.scss'
+@import './components/card.scss';
+@import './button/custom-checkout.scss';
